# 3rd_imdc_afya_ric

./: README.md  predictions.csv  pyproject.toml
notebooks/: connection_mosqlient.ipynb  training2.ipynb
src/1_preprocessing/: 01_dengue_preprocessing.ipynb  02_merge_climate.ipynb  03_merge_access_afya.ipynb
src/2_model/: predictions.csv  training.py
